<resources>
    <string name="app_name">calculadoraSimples</string>
    <string name="somar">somar</string>
    <string name="subtrair">subtrair</string>
    <string name="multiplicar">multiplicar</string>
    <string name="dividir">dividir</string>
    <string name="valor1">digite o primeiro valor</string>
    <string name="valor2">digite o segundo valor</string>
    <string name="resultado">resultado</string>
</resources>