<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor1" />

        <EditText
            android:id="@+id/et_valor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:numeric="decimal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor2" />

        <EditText
            android:id="@+id/et_valor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:numeric="decimal" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado" />

        <Button
            android:id="@+id/btnsoma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/somar"
            android:onClick="somar"/>


        <Button
            android:id="@+id/btnsubtrai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="subtrai"
            android:text="@string/subtrair" />

        <Button
            android:id="@+id/btnmultplica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="multiplica"
            android:text="@string/multiplicar" />

        <Button
            android:id="@+id/btndivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="dividir"
            android:text="@string/dividir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>